src/objects/zqu__QuoteChargeSummary__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillingDiscount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingSubtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTotal__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ChangeLog__c</fullName>
        <description>The text describing the change of Amendment or Renewal</description>
        <inlineHelpText>The text describing the change of Amendment or Renewal</inlineHelpText>
        <label>Change Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeNumber__c</fullName>
        <description>Charge Number of Zuora Rate Plan Charge</description>
        <inlineHelpText>Charge Number of Zuora Rate Plan Charge</inlineHelpText>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRREndDate__c</fullName>
        <description>The end date for the Delta Discount MRR on this charge.</description>
        <inlineHelpText>The end date for the Delta Discount MRR on this charge.</inlineHelpText>
        <label>Delta Discount MRR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRRStartDate__c</fullName>
        <description>The start date for the Delta Discount MRR on this charge.</description>
        <inlineHelpText>The start date for the Delta Discount MRR on this charge.</inlineHelpText>
        <label>Delta Discount MRR Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRR__c</fullName>
        <description>Delta Discount MRR value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount MRR value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBEndDate__c</fullName>
        <description>The end date for the Delta Discount TCB on this charge.</description>
        <inlineHelpText>The end date for the Delta Discount TCB on this charge.</inlineHelpText>
        <label>Delta Discount TCB End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBStartDate__c</fullName>
        <description>The start date for the Delta Discount TCB on this charge.</description>
        <inlineHelpText>The start date for the Delta Discount TCB on this charge.</inlineHelpText>
        <label>Delta Discount TCB Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBTax__c</fullName>
        <description>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCB__c</fullName>
        <description>Delta Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCVEndDate__c</fullName>
        <description>The end date for the Delta Discount TCV on this charge.</description>
        <inlineHelpText>The end date for the Delta Discount TCV on this charge.</inlineHelpText>
        <label>Delta Discount TCV End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCVStartDate__c</fullName>
        <description>The start date for the Delta Discount TCV on this charge.</description>
        <inlineHelpText>The start date for the Delta Discount TCV on this charge.</inlineHelpText>
        <label>Delta Discount TCV Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCV__c</fullName>
        <description>Delta Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRREndDate__c</fullName>
        <description>The end date for the Delta MRR on this charge.</description>
        <inlineHelpText>The end date for the Delta MRR on this charge.</inlineHelpText>
        <label>Delta MRR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRRStartDate__c</fullName>
        <description>The start date for the Delta MRR on this charge.</description>
        <inlineHelpText>The start date for the Delta MRR on this charge.</inlineHelpText>
        <label>Delta MRR Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Delta MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBEndDate__c</fullName>
        <description>The end date for the Delta TCB on this charge.</description>
        <inlineHelpText>The end date for the Delta TCB on this charge.</inlineHelpText>
        <label>Delta TCB End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBStartDate__c</fullName>
        <description>The start date for the Delta TCB on this charge.</description>
        <inlineHelpText>The start date for the Delta TCB on this charge.</inlineHelpText>
        <label>Delta TCB Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBTax__c</fullName>
        <description>Tax on Delta TCB returned from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta TCB returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCB__c</fullName>
        <description>Delta TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCVEndDate__c</fullName>
        <description>The end date for the Delta TCV on this charge.</description>
        <inlineHelpText>The end date for the Delta TCV on this charge.</inlineHelpText>
        <label>Delta TCV End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCVStartDate__c</fullName>
        <description>The start date for the Delta TCV on this charge.</description>
        <inlineHelpText>The start date for the Delta TCV on this charge.</inlineHelpText>
        <label>Delta TCV Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Delta TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>Description field of Product Rate Plan Charge in product catalog</description>
        <inlineHelpText>Description field of Product Rate Plan Charge in product catalog</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <label>Discount Level</label>
        <picklist>
            <picklistValues>
                <fullName>RatePlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Discount__c</fullName>
        <description>Discount of the charge price</description>
        <inlineHelpText>Discount of the charge price</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__EffectivePrice__c</fullName>
        <description>The effective price of this charge</description>
        <inlineHelpText>The effective price of this charge</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <description>The included units of this charge</description>
        <inlineHelpText>The included units of this charge</inlineHelpText>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <description>List price field of Product Rate Plan Charge in product catalog</description>
        <inlineHelpText>List price field of Product Rate Plan Charge in product catalog</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListTotal__c</fullName>
        <description>The list total price for the charge</description>
        <inlineHelpText>The list total price for the charge</inlineHelpText>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <description>Monthly Recurring Revenue of this charge</description>
        <inlineHelpText>Monthly Recurring Revenue of this charge</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <description>Model field of Product Rate Plan Charge in product catalog</description>
        <inlineHelpText>Model field of Product Rate Plan Charge in product catalog</inlineHelpText>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Charge Summaries</relationshipLabel>
        <relationshipName>Quote_Charge_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Period__c</fullName>
        <description>Period of this charge</description>
        <inlineHelpText>Period of this charge</inlineHelpText>
        <label>Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__PreviewedMRR__c</fullName>
        <description>MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PreviewedTCV__c</fullName>
        <description>TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Summaries</relationshipLabel>
        <relationshipName>Quote_Charge_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Product_Name__c</fullName>
        <formula>zqu__QuoteRatePlan__r.zqu__QuoteProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Product_Rate_Plan_Name__c</fullName>
        <formula>zqu__QuoteRatePlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Rate Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteChargeSummaryFullName__c</fullName>
        <description>The full name of Quote Charge Summary</description>
        <inlineHelpText>The full name of Quote Charge Summary</inlineHelpText>
        <label>Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>zqu__QuoteRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Summaries</relationshipLabel>
        <relationshipName>Quote_Charge_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <description>The Quote rateplan this charge belongs to</description>
        <inlineHelpText>The Quote rateplan this charge belongs to</inlineHelpText>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Charge Summaries</relationshipLabel>
        <relationshipName>QuoteChargeSummarys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__Quote_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Charge</label>
        <referenceTo>zqu__QuoteCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Summaries</relationshipLabel>
        <relationshipName>Quote_Charge_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <description>Total Contact Value of this charge</description>
        <inlineHelpText>Total Contact Value of this charge</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TotalPrice__c</fullName>
        <description>Total price of this charge</description>
        <inlineHelpText>Total price of this charge</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <label>Upto How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Charge Summary</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__Description__c</columns>
        <columns>zqu__Quote_Charge__c</columns>
        <columns>zqu__QuoteRatePlan__c</columns>
        <columns>zqu__QuoteRatePlanCharge__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Charge Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>